Need to fix keypad

--- a/pocket_meteostation_v2.ioc
+++ b/pocket_meteostation_v2.ioc
@@ -11,8 +11,9 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=readBattVoltage,24,128,StartReadBattVoltageTask,Default,NULL,Dynamic,NULL,NULL;renderUI,32,128,StartRenderUITask,Default,NULL,Dynamic,NULL,NULL;pollKeypad,32,128,StartPollKeypadTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE
+FREERTOS.Tasks01=readBattVoltage,24,128,StartReadBattVoltageTask,Default,NULL,Dynamic,NULL,NULL;renderUI,32,128,StartRenderUITask,Default,NULL,Dynamic,NULL,NULL;pollKeypad,32,128,StartPollKeypadTask,Default,NULL,Dynamic,NULL,NULL;readBMEValues,24,128,StartReadBMEValuesTask,Default,NULL,Dynamic,NULL,NULL;readDateTime,24,128,StartReadDateTimeTask,Default,NULL,Dynamic,NULL,NULL;blinkStatusLED,40,128,StartBlinkStatusLEDTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=8192
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -49,7 +50,7 @@ Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PB8
 Mcu.Pin21=PB9
 Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin23=VP_SYS_VS_tim17
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PC0
@@ -76,9 +77,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
-NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM1_UP_TIM16_IRQn
-NVIC.TimeBaseIP=TIM1
+NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM1_TRG_COM_TIM17_IRQn
+NVIC.TimeBaseIP=TIM17
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=Keypad_R4_IN
@@ -266,8 +267,8 @@ USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_tim17.Mode=TIM17
+VP_SYS_VS_tim17.Signal=SYS_VS_tim17
 board=NUCLEO-F303RE
 boardIOC=true
 rtos.0.ip=FREERTOS
