--- a/pocket_meteostation_v2.ioc
+++ b/pocket_meteostation_v2.ioc
@@ -12,7 +12,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=readBattVoltage,24,128,StartReadBattVoltageTask,Default,NULL,Dynamic,NULL,NULL;renderUI,32,128,StartRenderUITask,Default,NULL,Dynamic,NULL,NULL;pollKeypad,32,128,StartPollKeypadTask,Default,NULL,Dynamic,NULL,NULL;readBMEValues,24,128,StartReadBMEValuesTask,Default,NULL,Dynamic,NULL,NULL;readDateTime,24,128,StartReadDateTimeTask,Default,NULL,Dynamic,NULL,NULL;blinkStatusLED,40,128,StartBlinkStatusLEDTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=readBattVoltage,24,256,StartReadBattVoltageTask,Default,NULL,Dynamic,NULL,NULL;renderUI,32,256,StartRenderUITask,Default,NULL,Dynamic,NULL,NULL;pollKeypad,32,256,StartPollKeypadTask,Default,NULL,Dynamic,NULL,NULL;readBMEValues,24,256,StartReadBMEValuesTask,Default,NULL,Dynamic,NULL,NULL;readDateTime,24,256,StartReadDateTimeTask,Default,NULL,Dynamic,NULL,NULL;blinkStatusLED,40,256,StartBlinkStatusLEDTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=8192
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -34,31 +34,28 @@ Mcu.IP7=USART2
 Mcu.IPNb=8
 Mcu.Name=STM32F303R(D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA6
-Mcu.Pin13=PB0
-Mcu.Pin14=PA9
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PC10
-Mcu.Pin18=PC12
-Mcu.Pin19=PB3
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_SYS_VS_tim17
-Mcu.Pin3=PF0-OSC_IN
-Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PC0
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=24
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PA9
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin20=VP_SYS_VS_tim17
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA6
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
@@ -81,11 +78,6 @@ NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM1_TRG_COM_TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA1.GPIO_Label=Keypad_R4_IN
-PA1.GPIO_PuPd=GPIO_PULLDOWN
-PA1.Locked=true
-PA1.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -123,11 +115,31 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=STATUS_LED
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB0.GPIO_Label=Keypad_R3_IN
-PB0.GPIO_PuPd=GPIO_PULLDOWN
-PB0.Locked=true
-PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=BTN_UP
+PB1.GPIO_PuPd=GPIO_PULLDOWN
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB13.GPIO_Label=BTN_DOWN
+PB13.GPIO_PuPd=GPIO_PULLDOWN
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB14.GPIO_Label=BTN_LEFT
+PB14.GPIO_PuPd=GPIO_PULLDOWN
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB15.GPIO_Label=BTN_MIDDLE
+PB15.GPIO_PuPd=GPIO_PULLDOWN
+PB15.Locked=true
+PB15.Signal=GPIO_Input
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB2.GPIO_Label=BTN_RIGHT
+PB2.GPIO_PuPd=GPIO_PULLDOWN
+PB2.Locked=true
+PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -138,38 +150,12 @@ PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC0.GPIO_Label=Keypad_R2_IN
-PC0.GPIO_PuPd=GPIO_PULLDOWN
-PC0.Locked=true
-PC0.Signal=GPIO_Input
-PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC1.GPIO_Label=Keypad_R1_IN
-PC1.GPIO_PuPd=GPIO_PULLDOWN
-PC1.Locked=true
-PC1.Signal=GPIO_Input
-PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=Keypad_C4_OUT
-PC10.Locked=true
-PC10.Signal=GPIO_Output
-PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=Keypad_C3_OUT
-PC12.Locked=true
-PC12.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=Keypad_C2_OUT
-PC13.Locked=true
-PC13.Signal=GPIO_Output
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=Keypad_C1_OUT
-PC2.Locked=true
-PC2.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
